[tool.poetry]
name = "quant-replicate"
version = "0.1.0"
description = "Deterministic, replayable multi-alpha quant framework with replication test"
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0"
numpy = "^1.26"
optuna = "^3.4"
quantstats = "^0.0.59"
ccxt = "^3.0"
ib_insync = "^0.10"
kiteconnect = "^3.1"
matplotlib = "^3.7"
pytest = "^7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
